# ChatBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  EDITING_GUIDE.md  README.md  REPORT.md  colab_finetune_lora.ipynb  colab_train.ipynb  docker-compose.yml  pool-feature-diagram.html  pyproject.toml  qa_corpus 복사본.txt  w9.py  발표_및_복습계획서.md  발표_및_복습계획서.txt
.github/workflows/: ci.yml  static.yml
chatbot/: __init__.py  agent_graph.py  autocomplete_corpus_nikl.txt  chatbot.txt  chunking.py  config.py  embeddings.py  eval.py  eval_questions.jsonl  finetune_lora.py  indexes.py  ingest.py  main.py  model.py  providers.py  qa_match.py  qa_pairs.jsonl  qwen_local.py  rag_chain.py  rag_langchain.py  rag_types.py  train.py
chatbot/local_chat/: __init__.py  app.py  auth.py  db.py  web.py
chatbot/rag_docs/: fastapi_basic.txt  langchain_basic.txt  langgraph_basic.txt  qwen_finetuning.txt  rag_basic.txt
eval/: dataset.jsonl  mobility_knowledge_eval.json  targets.json
mobility_service/: README.md  __init__.py  admin.html  agent.py  app.py  auth.py  bundle.py  client.py  config.py  conversation_store.py  directions.py  geocode.py  index.html  knowledge.py  local_chat_qa.jsonl  local_responder.py  models.py  my_model.py  orders.py  pool_store.py  pooling.py  postcode.v2.js  providers.py  rideshare.py  store.py  taxi.html  user_store.py  web.py
mobility_service/knowledge/: 01-service-overview.md  02-delivery-options.md  03-order-lifecycle.md  04-bundle-pool-carpool.md  05-sandbox-and-safety.md  06-routes-and-eta.md
scripts/: __init__.py  benchmark_qwen_quant.py  build_qa_corpus.py  build_rag_index.py  convert_gguf.sh  evaluate_mobility_knowledge.py  evaluate_rag.py  evaluate_rag_langsmith.py  rag_eval_core.py  run_rag_experiments.py
tests/: test_kakao_mobility_extensions.py  test_mobility_knowledge.py  test_mobility_service.py  test_rag_pipeline.py  test_taxi_booking.py
