[project]
name = "moveops"
version = "0.1.0"
description = "MoveOps FastAPI backend for Kakao T quick/walking delivery sandbox orchestration."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69,<1",
    "fastapi>=0.110,<1",
    "google-genai>=1.0,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "uvicorn[standard]>=0.27,<1",
    "langgraph>=0.2,<1",
    "langsmith>=0.4,<1",
]

[tool.uv]
package = false